--- a/style.css
+++ b/style.css
@@ -56,3 +56,10 @@ button:active {
     grid-column: span 2;
     background-color: greenyellow;
 }
+/* Media Queries */
+@media only screen and (max-width: 600px) {
+    /* Adjust styles for smaller screens */
+    #calculator {
+        grid-template-columns: repeat(4, minmax(40px, 1fr));
+    }
+}
